# rustywatch

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  demo.cast  rustywatch.yaml
.github/: FUNDING.yml
.github/workflows/: PULL_REQUEST_TEMPLATE.md  cd.yml  ci.yml  release.yml
benches/: cli.rs
examples/: README.md
examples/bun/: bun.lockb  package.json  server.ts
examples/go-fiber/: .gitignore  go.mod
examples/go-fiber-api/: .gitignore  go.mod  main.go
examples/nodejs/: package-lock.json  package.json  server.js
examples/rust-actix/: Cargo.toml
examples/rust-actix/src/: main.rs
src/: args.rs  lib.rs  logger.rs  main.rs  run.rs
src/config/: entity.rs  helper.rs  mod.rs  read.rs  schema.rs
src/watch/: binary.rs  command.rs  filter.rs  mod.rs  notify.rs  reload.rs  watch.rs
tests/: cli.rs
watchdir/: hello-world.js
web/: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
web/src/components/: Footer.astro  Head.astro  Hero.astro
web/src/content/docs/: index.mdx
web/src/content/docs/blog/: benchmark.md  v0.2.*.md  v0.2.10.md  v0.3.0.md
web/src/content/docs/examples/: 01-simple-setup.md  02-advanced-setup.md
web/src/content/docs/getting-started/: index.md
web/src/content/docs/guides/: guides.md
web/src/content/docs/installation/: binary-releases.md  cargo.md
web/src/content/docs/reference/: reference.md
web/src/content/docs/usage/: usage-with-config.md  usage.md
web/src/styles/: custom.css
