[package]
name = "rustywatch"
description = "Live reloading for any programing languages"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
notify = "6.1.1"
tokio = { version = "1.40.0", features = ["full"] }

[profile.release]
strip = true
